--- a/CodeSprint/BL/BL.csproj
+++ b/CodeSprint/BL/BL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Mscc.GenerativeAI" Version="2.9.3" />
+  </ItemGroup>
+
 </Project>
